--- a/env/napari-bruce_apple_silicon.yml
+++ b/env/napari-bruce_apple_silicon.yml
@@ -14,10 +14,9 @@ dependencies:
   - pandas
   - matplotlib
   - tifffile
-  - openjdk
-  - cudatoolkit=11.2      
-  - cudnn=8.1.0           
+  - openjdk     
   - pip
   - pip:
-      - "tensorflow<2.11" 
+      - "tensorflow>=2.13" 
+      - tensorflow-metal
       - stardist          
