--- a/env/napari-bruce_macos_arm.yml
+++ b/env/napari-bruce_macos_arm.yml
@@ -17,6 +17,6 @@ dependencies:
   - openjdk     
   - pip
   - pip:
-      - "tensorflow>=2.13" 
+      - tensorflow-macos
       - tensorflow-metal
       - stardist          
