--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,18 @@ requires-python = ">=3.9"
 classifiers = ["Framework :: napari"]
 license = { text = "MIT" }
 authors = [{ name = "Benjamin Vallin", email = "ben.vallin@gmail.com" }]
-dependencies = []
+dependencies = [
+  "napari",
+  "numpy>=1.26.4,<2.0",
+  "opencv-python",
+  "ome-types",
+  "pandas",
+  "matplotlib",
+  "tifffile",
+  "qtpy",
+  "csbdeep",
+  "stardist",
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
@@ -21,9 +32,9 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 "napari_bruce" = [
-    "*.yaml",
-    "bioformats/bioformats_package.jar",
-    "stardist_models/**/*",
+  "*.yaml",
+  "bioformats/bioformats_package.jar",
+  "stardist_models/**/*",
 ]
 
 [project.entry-points."napari.manifest"]
