--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "napari-bruce"
-version = "0.0.2"
+version = "0.0.3"
 description = "A napari plugin for drawing PALM RoboSoftware elements using StarDist segmentation"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -17,17 +17,15 @@ classifiers = [
   "Intended Audience :: Science/Research",
 ]
 
+# Logical Python dependencies ONLY
 dependencies = [
   "napari",
-  "numpy>=1.26.4,<2.0",
-  "opencv-python-headless>=4.8",
+  "qtpy",
   "ome-types",
   "pandas",
   "matplotlib",
   "tifffile",
-  "qtpy",
   "csbdeep",
-  "stardist",
 ]
 
 [build-system]
@@ -52,5 +50,3 @@ napari-bruce = "napari_bruce:napari.yaml"
 
 [project.scripts]
 bruce = "napari_bruce.cli:cli_main"
-
-
