--- a/env/bruce-env_macos_arm.yml
+++ b/env/bruce-env_macos_arm.yml
@@ -4,14 +4,9 @@ channels:
 
 dependencies:
   - python=3.10
-  - numpy<1.24        
+  - numpy=1.23.5
   - napari
-  - pyqt
-  - opencv
-  - ome-types
-  - pandas
-  - matplotlib
-  - tifffile
+  - pyqt        
   - openjdk
   - pip
   - pip:
