--- a/env/bruce-env_macos_arm.yml
+++ b/env/bruce-env_macos_arm.yml
@@ -4,12 +4,12 @@ channels:
 
 dependencies:
   - python=3.10
-  - numpy=1.23.5
+  - numpy=1.26.4
   - napari
   - pyqt        
   - openjdk
   - pip
   - pip:
-      - tensorflow-macos
+      - tensorflow
       - tensorflow-metal
       - stardist
